mType/tests/testFiles/arrays/error/negativeArraySize.mt
// Test that negative array size causes an error
print("Testing negative array size");

// This should cause an error
int[] badArray = new int[-5];

print("This should not be reached");